--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.8.1
 certifi==2019.9.11
 chardet==3.0.4
 confusable-homoglyphs==3.2.0
+coverage==4.5.4
 dj-database-url==0.5.0
 Django==2.2.7
 django-bootstrap4==1.0.1
@@ -11,6 +12,7 @@ django-model-utils==3.2.0
 django-phone-field==1.8.0
 django-registration==3.0.1
 django-star-ratings==0.8.0
+djangorestframework==3.10.3
 gunicorn==20.0.3
 idna==2.8
 psycopg2==2.8.4
